name:               uwaps-blogs
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   src
  main-is:          site.hs
  build-depends:    base >= 4.0
                  , hakyll >= 4.6
  ghc-options:      -threaded
  default-language: Haskell2010
